--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments.html
@@ -17,14 +17,8 @@
 
 <body>
 
-	<th th:fragment="column_link(moduleURL, fieldName, columnLabel, removeTag)" th:remove="${removeTag}">
-		<!-- 
-		<a th:if="${sortField !=  fieldName}" class="text-white" 
-			th:href="@{${moduleURL} + '/page/' + ${currentPage} + '?sortField=' + ${fieldName} + '&sortDir=' +${sortDir} 
-			+ ${keyword != null ? '&keyword=' + keyword : ''}}">
-						[[${columnLabel}]]
-		</a>
-		-->
+	<th th:fragment="column_link(fieldName, columnLabel, removeTag)" th:remove="${removeTag}">
+
 		<a class="text-white"
 			th:href="@{${moduleURL} + '/page/' + ${currentPage} + '?sortField=' + ${fieldName} + '&sortDir=' + ${reverseSortDirString}
 			+ ${keyword != null ? '&keyword=' + keyword : ''} }">
@@ -36,7 +30,7 @@
 		</span>
 	</th>
 	
-	<a th:fragment="page_link(moduleURL,pageNum,label)" class="page-link" 
+	<a th:fragment="page_link(pageNum,label)" class="page-link" 
 	th:href="@{${moduleURL} + '/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' +${sortDir} 
 	+ ${keyword != null ? '&keyword=' + keyword : ''} + ${categoryId != null ? '&categoryId=' + categoryId : ''}} ">
 			[[${label}]]
@@ -138,7 +132,7 @@
 	<!-- REFACTOR END -->
 
 	<!-- PAGINATION -->
-	<div th:fragment="pagination(moduleURL, entityName)" th:remove="tag">
+	<div th:fragment="pagination(entityName)" th:remove="tag">
 		<div class="text-center m-1" th:if="${totalItems > 0}")>
 			<span>Showing [[${entityName}]] # [[${startCount}]] to [[${endCount}]] of [[${totalItems}]]</span>
 		</div>
@@ -150,23 +144,23 @@
 			<nav>
 			  <ul class="pagination justify-content-center flex-wrap">
 			    <li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
-			    	<a th:replace="fragments :: page_link(${moduleURL}, 1, 'First')"></a>
+			    	<a th:replace="fragments :: page_link(1, 'First')"></a>
 			    </li>		  
 			    <li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
-			    	<a th:replace="fragments :: page_link(${moduleURL}, ${currentPage - 1}, 'Previous')"></a>
+			    	<a th:replace="fragments :: page_link(${currentPage - 1}, 'Previous')"></a>
 			    </li>
 	
 			    <li th:class="${currentPage != i ? 'page-item': 'page-item active'}" 
 			    	th:each="i : ${#numbers.sequence(1, totalPages)}">
-			    	<a th:replace="fragments :: page_link(${moduleURL}, ${i}, ${i})"></a>
+			    	<a th:replace="fragments :: page_link(${i}, ${i})"></a>
 			    </li>
 	
 			    <li th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
-			    	<a th:replace="fragments :: page_link(${moduleURL}, ${currentPage + 1}, 'Next')"></a>
+			    	<a th:replace="fragments :: page_link(${currentPage + 1}, 'Next')"></a>
 			    </li>
 	
 			    <li th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
-			    	<a th:replace="fragments :: page_link(${moduleURL}, ${totalPages}, 'Last')"></a>
+			    	<a th:replace="fragments :: page_link(${totalPages}, 'Last')"></a>
 			    </li>		    
 			  </ul>
 			</nav>
@@ -175,8 +169,8 @@
 	<!-- PAGINATION END-->
 
 	<!-- SEARCH FORM AND MESSAGE -->
-	<div th:fragment="search_form_and_message(moduleURL)">
-		<form th:action="@{${moduleURL}}" class="form-inline m-3">
+	<div th:fragment="search_form_and_message()">
+		<form th:action="@{${moduleURL} + '/page/1'}" class="form-inline m-3">
 			<input type="hidden" name="sortField" th:value="${sortField}" />
 			<input type="hidden" name="sortDir" th:value="${sortDir}" />
 
