--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
@@ -45,7 +45,7 @@
 				<th:block sec:authorize="hasAnyAuthority('Admin', 'Salesperson', 'Editor', 'Shipper')">					
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" data-toggle="dropdown"
-						th:href="@{/brands}">Products</a>
+						th:href="@{/products}">Products</a>
 						<div class="dropdown-menu">
 							<a class="dropdown-item" th:href="@{/products/new}" 
 							sec:authorize="hasAnyAuthority('Admin', 'Editor')">Create New</a>
@@ -87,11 +87,19 @@
 					</li>
 				</th:block>
 
-				<th:block sec:authorize="hasAnyAuthority('Admin')">
-					<li class="nav-item">
-						<a class="nav-link" th:href="@{/settings}">Settings</a>
-					</li>
-				</th:block>
+				<li class="nav-item dropdown" sec:authorize="hasAuthority('Admin')">
+					<a class="nav-link dropdown-toggle" data-toggle="dropdown" 
+					th:href="@{/settings}">Settings</a>
+					<div class="dropdown-menu"> 
+						<a class="dropdown-item" th:href="@{/settings#general}">General</a>
+						<a class="dropdown-item" th:href="@{/settings#countries}">Country</a>
+						<a class="dropdown-item" th:href="@{/settings#states}">States</a>
+						<a class="dropdown-item" th:href="@{/settings#mailServer}">Mail Server</a>
+						<a class="dropdown-item" th:href="@{/settings#mailTemplate}">Mail Template</a>
+						<a class="dropdown-item" th:href="@{/settings#payment}">Payment</a>
+					</div>
+				</li>
+				
 				<li>
 					<span class="fas fa-user fa-2x icon-white"></span>
 				</li>
