--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/settings/states.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/settings/states.html
@@ -29,18 +29,19 @@
 		</div>
 	</div>
 	
-	<div class="form-group row mt-4">
-	    <label class="col-sm-2 col-form-label" id="labelStatesName">State/Province Name: </label>
-	    <div class="col-sm-6 ml-2">
-		    <input type="text" class="form-control" id="fieldStatesName" minlength="3"/>    
-	    </div>
-		<div class="col-lg-3 mt-1">
-			<input type="button" id="btnAddStates" value="New" class="btn btn-secondary mr-2"></input>
-		    <input type="button" id="btnUpdateStates" value="Update" class="btn btn-secondary mr-2" disabled="disabled" ></input>
-		    <input type="button" id="btnDeleteStates" value="Delete" class="btn btn-secondary " disabled="disabled">  </input>
-		</div>	    
-	</div>	
-		
+	<form id="formState">	
+		<div class="form-group row mt-4">
+		    <label class="col-sm-2 col-form-label" id="labelStatesName">State/Province Name: </label>
+		    <div class="col-sm-6 ml-2">
+			    <input type="text" class="form-control" id="fieldStatesName" required minlength="3" maxlength="45"/>    
+		    </div>
+			<div class="col-lg-3 mt-1">
+				<input type="button" id="btnAddStates" value="New" class="btn btn-secondary mr-2"></input>
+			    <input type="button" id="btnUpdateStates" value="Update" class="btn btn-secondary mr-2" disabled="disabled" ></input>
+			    <input type="button" id="btnDeleteStates" value="Delete" class="btn btn-secondary " disabled="disabled">  </input>
+			</div>	    
+		</div>	
+	</form>
 </div>
 
 </body>
