--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
@@ -29,7 +29,7 @@
 					<a class="nav-link" th:href="@{/users}">Login</a>
 				</li>		
 				<li class="nav-item">
-					<a class="nav-link" th:href="@{/users}">Register</a>
+					<a class="nav-link" th:href="@{/register}">Register</a>
 				</li>		
 				<li class="nav-item">
 					<a class="nav-link" th:href="@{/users}">Careers</a>
